add nodejs cicd

--- a/dockerfile/Dockerfile4nodejs
+++ b/dockerfile/Dockerfile4nodejs
@@ -1,18 +1,23 @@
-#VERSION:1.0
 FROM node:slim
 
 ARG MAIN_APP
 ENV APPNAME ${MAIN_APP}
-ENV ARTIFACTORY_HOME /home/artifactory
+ENV ARTIFACTORY_HOME /home/docker
 
-# Add a docker user, make work dir
-RUN adduser --disabled-password --gecos "" docker && echo "docker ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers && mkdir -p ${ARTIFACTORY_HOME} && chown docker:docker ${ARTIFACTORY_HOME}
+# Add an docker user, make work dir
+RUN adduser --disabled-password --gecos "" docker && \
+  echo "docker ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers && \
+  mkdir -p ${ARTIFACTORY_HOME} && \
+  chown docker:docker ${ARTIFACTORY_HOME}
 
 WORKDIR ${ARTIFACTORY_HOME}
 
-# Copy your jar to the container
-COPY . ${ARTIFACTORY_HOME}
+COPY . ./
 
-# Launch the artifactory as docker user
+RUN npm install
+
+# RUN as docker user
 USER docker
-CMD [ "node ${APPNAME}" ]
+CMD node ${APPNAME}
+
+
